# extcalc

./: AUTHORS  CMakeLists.txt  CMakeLists.txt.qt6  ChangeLog  README.md
doc/: dev_docu.html
share/: extcalc.desktop
src/: Makefile.am  Makefile.in  buttons.cpp  buttons.h  calcinput.cpp  calcinput.h  calcpref.cpp  calcpref.h  calctable.cpp  calctable.h  calcwidget.cpp  calcwidget.h  catalog.cpp  catalog.h  extcalc.cpp  extcalc.h  functiontable.cpp  functiontable.h  global.cpp  global.h  graph.cpp  graph.h  graphinput.cpp  graphinput.h  graphout.cpp  graphout.h  graphpref.cpp  graphpref.h  graphsetdialog.cpp  graphsetdialog.h  graphsolve.cpp  graphsolve.h  helpbrowser.cpp  helpbrowser.h  importdialog.cpp  importdialog.h  infodialog.cpp  infodialog.h  list.h  matrixwidget.cpp  (+22 more)
src/.deps/.svn/: all-wcprops  entries
